# lute-backend

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  old_pyproject.toml  pyproject.toml  sonar-project.properties  test1.sqlite
.github/workflows/: audit.yaml  ci.yaml  test.yaml
.run/: app run.run.xml
data/: openapi.yaml  test.db
docs/: conf.py
scripts/: env.py
src/app/: __main__.py  __metadata__.py  app.bak  asgi.py  cli.py  utils.py
src/app/cli/: commands.py
src/app/config/: app.py  base.py  openapi.py  static_files.py
src/app/db/: __init__.py  alembic.ini
src/app/db/demo_data/: english.toml  read_toml.py
src/app/db/migrations/: env.py
src/app/db/migrations/versions/: 18cd8bf35835_add_first_word_to_words.py  2024-02-23_init_b5950647bd2a.py  2024-02-24_add_language_in_word_98c1180a7836.py  85a02c237076_remove_publish_dt_from_book.py  94fd854b4f75_add_page_num_in_booktexts.py  982896c80c79_add_title_in_booktext.py  a24f66bcae0a_add_unique_constrainst_on_word_images_.py
src/app/db/models/: __init__.py  base.py  book.py  language.py  word.py
src/app/domain/: plugins.py
src/app/domain/book/: controllers.py  dependencies.py  dtos.py  get_demo_book.py  models.py  services.py
src/app/domain/book/demo_books/: en.md  jp.md
src/app/domain/books/: __init__.py  controllers.py  dependencies.py  dtos.py  models.py  services.py
src/app/domain/books/controllers/: __init__.py  book.py
src/app/domain/dict/: controllers.py
src/app/domain/dict/mdict/: mdict_service.py
src/app/domain/home/: controllers.py
src/app/domain/image_search/: bing_image_search.py
src/app/domain/language/: controllers.py  dependencies.py  dtos.py  models.py  services.py
src/app/domain/parser/: __init__.py  japanese_parser.py  language_parser.py  markdown_text_parser.py  parser_tool.py  register_parser.py  spacy_parser.py  test.md
src/app/domain/parser/language_parsers/: EnglishParser.py  __init__.py  fugashi_parser.py  japanese_parser.py  language_parser.py  parser_helper.py  parser_tool.py  paser_config.py  spacy_parser.py
src/app/domain/parsers/: MarkdownTextParser.py
src/app/domain/parsers/language_parsers/: EnglishParser.py
src/app/domain/system/: controllers.py  dtos.py
src/app/domain/web/: controllers.py
src/app/domain/word/: controllers.py  dependencies.py  dtos.py  models.py  services.py
src/app/domain/words/: controllers.py  dependencies.py  dtos.py  models.py  services.py
src/app/lib/: dependencies.py  dto.py  exceptions.py  repository.py  serialization.py  service.py  settings.py  timer.py
src/app/lib/db/: __init__.py  alembic.ini  base.backup  base.py  orm.py
src/app/lib/db/migrations/: env.py
src/app/lib/db/migrations/versions/: 2023-09-29_init_c3a9a11cc35d.py  2024-02-04_test_c48f44ffb885.py  2024-02-09_add_word_tokens_7294c8cb9991.py  2024-02-09_init_685442b30be3.py  2024-02-10_book_books_37aff0b14db9.py  2024-02-11_add_unique_key_for_word_f7c3177db587.py
src/app/lib/log/: __init__.py  controller.py  worker.py
src/app/parsers/: AbstractParser.py  MarkdownTextParser.py  MdTextParser.py  WordMatcher.py
src/app/parsers/helper/: parse2segment.py
src/app/parsers/language_parsers/: EnglishParser.py  LanguageParser.py
src/app/parsers/test/: ml_parser.py  source.txt
src/app/server/: builder.py  openapi.py  plugins.py  routers.py  static_files.py  static_files_router.py  template.py
src/app/static/templates/: index.html
src/app/static/templates/base/: nav.html
tests/: conftest.py
tests/integration/: conftest.py  test1.sqlite  test_health.py  test_tests.py  test_words.py
tests/unit/: conftest.py
tests/unit/domain/book/: test_word_matching.py
tests/unit/domain/parser/: test_english_parser.py  test_japanese_parser.py  test_language_get_parser.py  test_markdown_parser.py
